--- a/client/c2c-app/src/styles.css
+++ b/client/c2c-app/src/styles.css
@@ -7,6 +7,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     border:solid black 2px;
 }
 
+.compact div{
+    padding:0px;
+    margin:0px;
+}
+
 .msg-text{
     font-size: 1em;
 }
