--- a/client/c2c-app/src/app/app.component.html
+++ b/client/c2c-app/src/app/app.component.html
@@ -6,7 +6,7 @@
         <div style="padding: 2vh 50px">
             <router-outlet></router-outlet>
         </div>
-        <div style="padding: 3vh 50px; border: 3px solid black">
+        <div>
             <router-outlet name="tester"></router-outlet>
         </div>
     </div>
