--- a/client/c2c-app/src/app/components/renter/manage-booking/manage-booking.component.html
+++ b/client/c2c-app/src/app/components/renter/manage-booking/manage-booking.component.html
@@ -1,18 +1,49 @@
-<p>renter manage-booking works!</p>
-
-<div *ngIf="fullbook">
-    {{fullbook.bookid}}<br>
-    {{fullbook.status}}
-    {{bookStatus[fullbook.status]}}<br>
-
-    <button type="button" (click)="changeBookStatus('C')">Cancalled</button>
-    <button type="button" (click)="changeBookStatus('P')">Paid</button>
+<div *ngIf="fb">
+    <h3>booking details</h3>
+        Ref No: {{fb.car.maker}} {{fb.car.model}} {{fb.book_details_id}} <br>
+        Status: {{bookStatus[fb.status]}}<br>
+        Date from: {{fb.date_from}} || Date To:{{fb.date_to}}<br>
+        No of driver: {{fb.drivers_no}}<br>
+        Collection Point: {{fb.collection_point.title}} ({{fb.collection_point.address}})<br>
+        DropOff Point: {{fb.dropoff_point.title}} ({{fb.dropoff_point.address}})<br>
+    <hr>
+    <h3>renter details</h3>
+        Name: {{fb.first_name}} {{fb.last_name}}<br>
+        Email:  {{fb.email}} <br>
+        Contact No: {{fb.contact_no}}<br>
+    <hr>
     
-    <button type="button" (click)="changeBookStatus('A')" disabled=true>Accepted</button>
-    <button type="button" (click)="changeBookStatus('X')" disabled=true>Rejected</button>
-    <button type="button" (click)="changeBookStatus('L')" disabled=true>On Loan</button>
-    <button type="button" (click)="changeBookStatus('O')" disabled=true>Completed</button>
-    <button type="button" (click)="changeBookStatus('N')" disabled=true>New</button>
-    <button type="button" (click)="changeBookStatus('D')" disabled=true>Deleted</button>
+    <h3>Car Details</h3>
+        vehicle_regis_no:{{fb.car.vehicle_regis_no}}<br>
+        rental_rate:{{fb.car.rental_rate}}<br>
+        country:{{fb.car.country_code}}<br>
+        city:{{fb.car.city}}<br>
+        year:{{fb.car.year}}<br>
+        maker:{{fb.car.maker}}<br>
+        model:{{fb.car.model}}<br>
+        trim:{{fb.car.trim}}<br>
+        description:{{fb.car.description}}<br>
+        extras:{{fb.car.extras}}<br>
+        like:{{fb.car.like_count}}<br>
+        review count:{{fb.car.review_count}}<br>
+    <hr>
+    <h3>owner details</h3>
+        Name: {{fb.car.first_name}} {{fb.car.last_name}}<br>
+        Email:  {{fb.car.email}} <br>
+        Contact No: {{fb.car.contact_no}}<br>
+    <hr>
+    <h3>drivers details</h3>
+        <div *ngFor="let d of fb.drivers">
+        Name: {{d.first_name}} || {{d.last_name}} <br>
+        Issue at {{d.issuer}} by {{d.issue_country}} <br>
+        Driving License No: {{d.license_no}} 
+        Year of exp : {{d.exp_in_year}}
+        <hr>
+        </div>
+    <hr>
     
+    <div>
+        <button type="button" (click)="changeBookStatus('C')" >Cancalled</button>
+        <button type="button" (click)="changeBookStatus('P')" >Paid</button>
+    </div>
 </div>
