--- a/client/c2c-app/src/app/components/test/routingpage.component.html
+++ b/client/c2c-app/src/app/components/test/routingpage.component.html
@@ -1,5 +1,7 @@
-<p style="padding-top:35px">routingpage works!</p>
+<div style="visibility: true;border:black 3px solid">
+
 <div style="border:black 1px solid">
+        <p style="padding-top:35px">routingpage works!</p>
     <button type="button" routerLink="/home">Home</button>
     <button type="button" routerLink="/login">Login</button>
     <button type="button" routerLink="/register/renter">Register:renter</button>
@@ -50,4 +52,5 @@
     <button type="button" routerLink="/about-us">About Us</button>
     <button type="button" routerLink="/FAQ">FAQ</button>
     <button type="button" routerLink="/TnC">TnC</button>
+</div>
 </div>
